[gd_scene load_steps=6 format=3 uid="uid://school_hub_001"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/exploration/room.gd" id="2_room"]
[ext_resource type="Script" path="res://scripts/ui/school_hub_ui.gd" id="3_school_hub_ui"]
[ext_resource type="PackedScene" uid="uid://pause_menu_001" path="res://scenes/pause_menu.tscn" id="4_pause_menu"]
[ext_resource type="PackedScene" uid="uid://quest_log_001" path="res://scenes/quest_log.tscn" id="5_quest_log"]

[sub_resource type="RectangleShape2D" id="wall_shape"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="player_shape"]
size = Vector2(32, 32)

[node name="SchoolHub" type="Node2D"]

[node name="Room" type="Node2D" parent="."]
script = ExtResource("2_room")
room_id = "school_hub_01"
room_name = "Magic School"
biome_type = "school"

[node name="Background" type="Sprite2D" parent="Room"]
position = Vector2(640, 360)
scale = Vector2(1.0, 1.0)

[node name="Walls" type="Node2D" parent="Room"]

[node name="WallTop" type="StaticBody2D" parent="Room/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Walls/WallTop"]
shape = SubResource("wall_shape")
position = Vector2(640, 50)

[node name="Visual" type="ColorRect" parent="Room/Walls/WallTop"]
offset_left = 615.0
offset_top = 25.0
offset_right = 665.0
offset_bottom = 75.0
color = Color(0.3, 0.25, 0.2, 1)

[node name="WallBottom" type="StaticBody2D" parent="Room/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Walls/WallBottom"]
shape = SubResource("wall_shape")
position = Vector2(640, 670)

[node name="Visual" type="ColorRect" parent="Room/Walls/WallBottom"]
offset_left = 615.0
offset_top = 645.0
offset_right = 665.0
offset_bottom = 695.0
color = Color(0.3, 0.25, 0.2, 1)

[node name="WallLeft" type="StaticBody2D" parent="Room/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Walls/WallLeft"]
shape = SubResource("wall_shape")
position = Vector2(50, 360)

[node name="Visual" type="ColorRect" parent="Room/Walls/WallLeft"]
offset_left = 25.0
offset_top = 335.0
offset_right = 75.0
offset_bottom = 385.0
color = Color(0.3, 0.25, 0.2, 1)

[node name="WallRight" type="StaticBody2D" parent="Room/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Walls/WallRight"]
shape = SubResource("wall_shape")
position = Vector2(1230, 360)

[node name="Visual" type="ColorRect" parent="Room/Walls/WallRight"]
offset_left = 1205.0
offset_top = 335.0
offset_right = 1255.0
offset_bottom = 385.0
color = Color(0.3, 0.25, 0.2, 1)

[node name="Player" type="CharacterBody2D" parent="Room"]
position = Vector2(200, 360)
script = ExtResource("1_player")

[node name="Visual" type="AnimatedSprite2D" parent="Room/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Player"]
shape = SubResource("player_shape")

[node name="SpellCastPoint" type="Node2D" parent="Room/Player"]
position = Vector2(16, 0)

[node name="Camera2D" type="Camera2D" parent="Room/Player"]
position = Vector2(0, 0)
enabled = true
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
anchor_right = 0.3
anchor_bottom = 0.05
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 50.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HealthBar"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Health: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SchoolHubUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_school_hub_ui")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SchoolHubUI"]
layout_mode = 1
anchors_preset = 2
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="Label" type="Label" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
text = "School Hub"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="GoExploreButton" type="Button" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
text = "Go Explore"
custom_minimum_size = Vector2(200, 40)

[node name="Spacer2" type="Control" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="SchoolManagementButton" type="Button" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
text = "School Management"
custom_minimum_size = Vector2(200, 40)

[node name="Spacer3" type="Control" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="QuestLogButton" type="Button" parent="UI/SchoolHubUI/VBoxContainer"]
layout_mode = 2
text = "Quest Log"
custom_minimum_size = Vector2(200, 40)

[node name="PauseMenu" parent="UI" instance=ExtResource("4_pause_menu")]

[node name="QuestLog" parent="UI" instance=ExtResource("5_quest_log")]
visible = false

[connection signal="health_changed" from="Room/Player" to="UI/HealthBar" method="_on_player_health_changed"]

[editable path="Room/Player"]
